--- a/src/components/ResizableBox/index.module.scss
+++ b/src/components/ResizableBox/index.module.scss
@@ -1,16 +1,17 @@
 .boxWrapper {
   position: absolute;
   width: 100px;
-  // background-color: rgba(red, 0.3);
+  // background-color: rgba(red, 0.2);
 }
 
 .box {
+  position: relative;
   padding: 10px;
   display: flex;
   align-items: center;
   justify-content: center;
   text-align: center;
-  border-radius: 4px;
+  border-radius: 5px;
   width: 100%;
   border: solid 1px;
   font-size: 12px;
