--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -1,4 +1,30 @@
 .container {
   position: relative;
-  padding: 40px;
+  padding: 200px;
+  height: 100%;
+}
+
+.column {
+  position: relative;
+  width: 200px;
+  height: 100%;
+  background-color: #f6f6f6;
+  border: solid 1px #e1e1e1;
+  box-sizing: content-box;
+}
+
+.columnBg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.columnBgBorder {
+  position: absolute;
+  left: 0;
+  width: 100%;
+  height: 1px;
+  background-color: #e1e1e1;
 }
