--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -1,8 +1,32 @@
 .container {
-  display: flex;
   position: relative;
   padding: 20px;
   height: 100%;
+}
+
+.containerInner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+.boxContainer {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+}
+
+.columnContainer {
+  display: flex;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 0;
 }
 
 .column {
