--- a/src/components/DraggableBox/index.module.scss
+++ b/src/components/DraggableBox/index.module.scss
@@ -1,5 +1,5 @@
 .box {
   position: absolute;
   border-radius: 5px;
-  background-color: rgba(blue, 0.2);
+  // background-color: rgba(blue, 0.2);
 }
