--- a/src/components/ResizableBox/index.module.scss
+++ b/src/components/ResizableBox/index.module.scss
@@ -2,7 +2,7 @@
   position: absolute;
   width: 100px;
   padding: 5px;
-  background-color: rgba(red, 0.2);
+  // background-color: rgba(red, 0.2);
 }
 
 .box {
