--- a/src/components/BoxApplication/index.module.scss
+++ b/src/components/BoxApplication/index.module.scss
@@ -1,15 +1,15 @@
 .application {
   position: relative;
-  width: 100%;
-  height: 100%;
-}
-
-.columnContainer {
-  display: flex;
-  position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: 0;
+}
+
+.applicationInner {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
