--- a/src/components/ColumnContainer/index.module.scss
+++ b/src/components/ColumnContainer/index.module.scss
@@ -1,8 +1,6 @@
 .container {
   display: flex;
-  position: absolute;
-  top: 0;
-  left: 0;
+  position: relative;
   width: 100%;
   height: 100%;
   z-index: 0;
