--- a/src/components/ResizableBox/index.module.scss
+++ b/src/components/ResizableBox/index.module.scss
@@ -20,5 +20,5 @@
   user-select: none;
   white-space: pre-line;
   overflow: hidden;
-  box-shadow: 0 0 5px rgba(black, 0.2);
+  // box-shadow: 0 0 5px rgba(black, 0.2);
 }
