--- a/src/components/BoxApplication/index.module.scss
+++ b/src/components/BoxApplication/index.module.scss
@@ -7,7 +7,11 @@
 
 .applicationInner {
   position: absolute;
+  width: 100%;
   height: 100%;
-  overflow-x: hidden;
-  overflow-y: auto;
+  overflow: auto;
+
+  // &::-webkit-scrollbar {
+  //   display: none;
+  // }
 }
