--- a/src/components/Column/index.module.scss
+++ b/src/components/Column/index.module.scss
@@ -4,7 +4,7 @@
   position: relative;
   width: 150px;
   height: 100%;
-  border: solid 1px #e1e1e1;
+  border: solid 1px #bbb;
 }
 
 .columnContent {
