--- a/src/components/BoxApplication/index.module.scss
+++ b/src/components/BoxApplication/index.module.scss
@@ -1,15 +1,18 @@
 .application {
-  position: relative;
+  position: fixed;
   top: 0;
   left: 0;
+  width: 100%;
   height: 100%;
+  padding: 100px 0 0 100px;
 }
 
 .applicationInner {
-  position: absolute;
+  position: relative;
   width: 100%;
-  height: 100%;
+  height: calc(100% - 100px);
   overflow: auto;
+  // padding-bottom: 100px;
 
   // &::-webkit-scrollbar {
   //   display: none;
