--- a/src/components/BoxApplication/index.module.scss
+++ b/src/components/BoxApplication/index.module.scss
@@ -1,15 +1,15 @@
 .application {
   position: fixed;
-  top: 0;
-  left: 0;
+  top: 40px;
+  left: 40px;
   width: 100%;
   height: 100%;
-  padding: 100px 0 0 100px;
+  padding: 40px 0 0 100px;
 }
 
 .applicationInner {
   position: relative;
-  width: 100%;
+  width: calc(100% - 100px - 40px);
   height: calc(100% - 100px);
   overflow: auto;
   // padding-bottom: 100px;
