--- a/src/components/BoxApplication/index.module.scss
+++ b/src/components/BoxApplication/index.module.scss
@@ -1,18 +1,20 @@
 .application {
   position: fixed;
+  // top: 0;
+  // left: 0;
   top: 40px;
   left: 40px;
   width: 100%;
   height: 100%;
-  padding: 40px 0 0 100px;
+  padding: 0 0 0 0;
 }
 
 .applicationInner {
   position: relative;
-  width: calc(100% - 100px - 40px);
-  height: calc(100% - 100px);
+  padding-left: 100px;
+  width: calc(100% - 20px);
+  height: calc(100% - 40px - 20px);
   overflow: auto;
-  // padding-bottom: 100px;
 
   // &::-webkit-scrollbar {
   //   display: none;
