--- a/src/components/BoxApplication/index.module.scss
+++ b/src/components/BoxApplication/index.module.scss
@@ -7,6 +7,18 @@
   width: 100%;
   height: 100%;
   padding: 0 0 0 0;
+
+  &::after {
+    content: '';
+    position: absolute;
+    top: 0 - 1px;
+    left: 0;
+    width: 100px;
+    height: 40px;
+    background-color: #fff;
+    border-bottom: #999 solid 1px;
+    z-index: 2;
+  }
 }
 
 .applicationInner {
