--- a/src/components/ColumnHeader/index.module.scss
+++ b/src/components/ColumnHeader/index.module.scss
@@ -15,8 +15,6 @@
   font-size: 14px;
   position: relative;
   background-color: #f7edef;
-
-  &:not(:last-child) {
-    border-right: 1px solid #999;
-  }
+  border-bottom: 1px solid #999;
+  border-right: 1px solid #999;
 }
