--- a/src/components/ColumnRowHeader/index.module.scss
+++ b/src/components/ColumnRowHeader/index.module.scss
@@ -15,13 +15,25 @@
   left: -100px;
   width: 100px;
   background-color: #fff;
+
+  &::after {
+    content: '';
+    position: absolute;
+    left: 100px;
+    top: 0;
+    height: 100%;
+    border-right: 1px solid #999;
+  }
 }
 
 .headerRow {
   position: relative;
   top: -2px;
   width: 100%;
-  border-top: 1px solid #ddd;
+
+  &:not(:first-child) {
+    border-top: 1px solid #ddd;
+  }
 
   // &:last-child {
   //   border-bottom: 1px solid #ccc;
