--- a/src/components/BoxApplication/index.module.scss
+++ b/src/components/BoxApplication/index.module.scss
@@ -1,9 +1,10 @@
+$offsetX: 20px;
+$offsetY: 20px;
+
 .application {
   position: fixed;
-  // top: 0;
-  // left: 0;
-  top: 40px;
-  left: 40px;
+  top: $offsetY;
+  left: $offsetX;
   width: 100%;
   height: 100%;
   padding: 0 0 0 0;
@@ -24,11 +25,11 @@
 .applicationInner {
   position: relative;
   padding-left: 100px;
-  width: calc(100% - 20px);
-  height: calc(100% - 40px - 20px);
+  width: calc(100vw - 20px - $offsetX);
+  height: calc(100% - 20px - $offsetY);
   overflow: auto;
 
-  // &::-webkit-scrollbar {
-  //   display: none;
-  // }
+  &::-webkit-scrollbar {
+    display: none;
+  }
 }
