--- a/src/features/BoxApplication/components/Column/index.module.scss
+++ b/src/features/BoxApplication/components/Column/index.module.scss
@@ -1,11 +1,12 @@
+@import '@/features/BoxApplication/styles/variables';
+
 .column {
   display: flex;
   flex-shrink: 0;
   position: relative;
-  width: 150px;
   height: 100%;
-  border-left: solid 1px #999;
-  border-right: solid 1px #999;
+  border-left: solid 2px $borderColor;
+  border-right: solid 2px $borderColor;
 
   &:not(:first-child) {
     border-left: 0;
@@ -15,10 +16,10 @@
 .columnContent {
   position: relative;
   height: 100%;
-  background-color: #f6f6f6;
+  background-color: #fff;
 
   &:not(:first-child) {
-    border-left: 1px dashed #999;
+    border-left: 1px dashed $borderColor;
   }
 }
 
@@ -35,5 +36,5 @@
   left: 0;
   width: 100%;
   height: 1px;
-  background-color: #ddd;
+  border-top: 1px dashed $borderColor;
 }
