--- a/src/features/BoxApplication/components/ResizableBox/index.module.scss
+++ b/src/features/BoxApplication/components/ResizableBox/index.module.scss
@@ -1,6 +1,5 @@
 .boxWrapper {
   position: absolute;
-  width: 100px;
   padding: 5px;
   // background-color: rgba(red, 0.2);
 }
@@ -20,5 +19,5 @@
   user-select: none;
   white-space: pre-line;
   overflow: hidden;
-  // box-shadow: 0 0 5px rgba(black, 0.2);
+  box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.15);
 }
