--- a/src/features/BoxApplication/index.module.scss
+++ b/src/features/BoxApplication/index.module.scss
@@ -1,10 +1,12 @@
-$offsetX: 20px;
-$offsetY: 20px;
+@import '@/features/BoxApplication/styles/variables';
+
+$padX: 20px;
+$padY: 20px;
 
 .application {
   position: fixed;
-  top: $offsetY;
-  left: $offsetX;
+  top: $padY;
+  left: $padX;
   width: 100%;
   height: 100%;
   padding: 0 0 0 0;
@@ -12,21 +14,21 @@ $offsetY: 20px;
   &::after {
     content: '';
     position: absolute;
-    top: 0 - 1px;
+    top: -2px;
     left: 0;
-    width: 100px;
+    width: $colRowHeaderWidth;
     height: 40px;
     background-color: #fff;
-    border-bottom: #999 solid 1px;
+    border-bottom: 2px solid $borderColor;
     z-index: 2;
   }
 }
 
 .applicationInner {
   position: relative;
-  padding-left: 100px;
-  width: calc(100vw - 20px - $offsetX);
-  height: calc(100% - 20px - $offsetY);
+  padding-left: $colRowHeaderWidth;
+  width: calc(100vw - $padX * 2);
+  height: calc(100% - $padY * 2);
   overflow: auto;
 
   &::-webkit-scrollbar {
