--- a/src/features/BoxApplication/components/Column/index.module.scss
+++ b/src/features/BoxApplication/components/Column/index.module.scss
@@ -37,4 +37,8 @@
   width: 100%;
   height: 1px;
   border-top: 1px dashed $borderColor;
+
+  &:nth-child(6n) {
+    border-top: 2px solid $borderColor;
+  }
 }
