--- a/src/features/BoxApplication/components/BoxContainer/index.module.scss
+++ b/src/features/BoxApplication/components/BoxContainer/index.module.scss
@@ -1,7 +1,7 @@
 .container {
   position: absolute;
-  top: 0;
-  left: 0;
+  top: -1px;
+  left: 1px;
   height: 100%;
   z-index: 0;
   overflow: hidden;
