--- a/src/features/BoxApplication/components/ColumnHeader/index.module.scss
+++ b/src/features/BoxApplication/components/ColumnHeader/index.module.scss
@@ -27,7 +27,7 @@
       position: absolute;
       top: 0;
       bottom: 0;
-      left: -1.5px;
+      left: 0;
       width: 1px;
       height: 20px;
       margin: auto;
