--- a/src/features/BoxApplication/components/DraggableBox/index.module.scss
+++ b/src/features/BoxApplication/components/DraggableBox/index.module.scss
@@ -1,5 +1,20 @@
 .box {
   position: absolute;
   border-radius: 5px;
-  // background-color: rgba(blue, 0.2);
+
+  // &::before {
+  //   content: '';
+  //   position: absolute;
+  //   top: 0;
+  //   left: 1px;
+  //   width: calc(100% - 2px);
+  //   height: calc(100% - 1px);
+  //   background-color: #ffe4bf;
+  //   z-index: 0;
+  // }
+}
+
+.boxInner {
+  position: relative;
+  z-index: 1;
 }
