--- a/src/features/BoxApplication/styles/variables.scss
+++ b/src/features/BoxApplication/styles/variables.scss
@@ -1,3 +1,7 @@
+$appPadX: 20px;
+$appPadTop: 100px;
+$appPadBottom: 20px;
+
 $colWidth: 150px;
 $colRowHeaderHeight: 40px;
 $colRowHeaderWidth: 65px;
