--- a/src/features/BoxApplication/index.module.scss
+++ b/src/features/BoxApplication/index.module.scss
@@ -1,13 +1,9 @@
 @import './styles/variables';
 
-$padX: 20px;
-$padTop: 100px;
-$padBottom: 20px;
-
 .application {
   position: fixed;
-  top: $padTop;
-  left: $padX;
+  top: $appPadTop;
+  left: $appPadX;
   width: 100%;
   height: 100%;
   padding: 0 0 0 0;
@@ -28,8 +24,8 @@ $padBottom: 20px;
 .applicationInner {
   position: relative;
   padding-left: $colRowHeaderWidth;
-  width: calc(100vw - $padX * 2);
-  height: calc(100% - $padTop - $padBottom);
+  width: calc(100vw - $appPadX * 2);
+  height: calc(100% - $appPadTop - $appPadBottom);
   overflow-x: hidden;
   overflow-y: auto;
 
