--- a/src/features/BoxApplication/index.module.scss
+++ b/src/features/BoxApplication/index.module.scss
@@ -26,8 +26,9 @@
   padding-left: $colRowHeaderWidth;
   width: calc(100vw - $appPadX * 2);
   height: calc(100% - $appPadTop - $appPadBottom);
-  overflow-x: hidden;
+  overflow-x: auto;
   overflow-y: auto;
+  // padding-right: $colWidth;
 
   &::-webkit-scrollbar {
     display: none;
