modal にbox情報送る

--- a/src/features/BoxApplication/components/ConfirmModal/index.module.scss
+++ b/src/features/BoxApplication/components/ConfirmModal/index.module.scss
@@ -46,3 +46,12 @@
     opacity: 0.8;
   }
 }
+
+.boxInfo {
+  background-color: #eee;
+  border: solid 1px #ccc;
+  padding: 10px;
+  border-radius: 5px;
+  width: 100%;
+  font-size: 12px;
+}
