--- a/src/features/BoxApplication/components/Box/index.module.scss
+++ b/src/features/BoxApplication/components/Box/index.module.scss
@@ -33,7 +33,7 @@
   overflow: hidden;
   box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.15);
 
-  &:hover {
-    cursor: pointer;
-  }
+  // &:hover {
+  //   cursor: pointer;
+  // }
 }
