--- a/src/features/BoxApplication/components/Box/index.module.scss
+++ b/src/features/BoxApplication/components/Box/index.module.scss
@@ -17,7 +17,6 @@
 
 .boxInner {
   position: relative;
-  padding: 10px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -32,8 +31,16 @@
   white-space: pre-line;
   overflow: hidden;
   box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.15);
+}
 
-  // &:hover {
-  //   cursor: pointer;
-  // }
+.label {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  inset: 0;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  pointer-events: none;
 }
